--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
-# Required. Change password with your postgresql`s one
-DATABASE_URL=postgresql+psycopg2://postgres:password@localhost/lockerbot
+# If you run bot with docker, then replace "localhost" with "db"
+DATABASE_URL=postgresql+psycopg2://user:password@localhost/dbname
 
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
 
-# Required. Paste here your botapi token from @botfather.
-BOT_TOKEN=123456789:PASTE-YOUR-BOTAPI-TOKEN-HERE
+BOT_TOKEN=
+
