refactor: added menu (aiogramui)

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-# If you run bot with docker, then replace "localhost" with "db"
+# If you run bot with Docker, then replace "localhost" with "db"
 DATABASE_URL=postgresql+psycopg2://user:password@localhost/dbname
 
+# Needed for Docker
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
